# Aquarius

./: .gitignore  Aquarius.sln  Aquarius.vcxproj  CMakeLists.txt  CMakeLists_old.txt  CudaCommons.h  Fluid.h  Fluid_2D.h  Fluid_2D_FLIP.cuh  Fluid_2D_Full.cuh  Fluid_2D_PCISPH.cuh  Fluid_2D_PCISPH_CPU.h  Fluid_2D_PoistionBased_CPU.h  Fluid_2D_SemiLagrange.cuh  Fluid_2D_SemiLagrange.h  GpuCommons.h  InputHandler.h  MAC_Grid.h  MAC_Grid_2D.cuh  MAC_Grid_2D.h  MAC_Grid_3D.cuh  PCG.h  Quad.h  Quad_vs.glsl  README.md  SPD_Solver.h  WeightKernels.h  main.cu
Common/: Commons.h  GpuCommons.h  InputHandler.h
Dependencies/glew/: glew.pc
Dependencies/glfw/: GLFW.sln
Dependencies/include/: nuklear.h  nuklear_glfw_gl3.h
Executables/: Aquarius.exp  Aquarius.lib
Fluid/: Fluid.h  FluidConfig.cu  FluidConfig.cuh  Fluid_2D.h  Fluid_2D_FLIP.cuh  Fluid_2D_Full.cuh  Fluid_2D_PCISPH.cuh  Fluid_2D_PoistionBased_CPU.h  Fluid_2D_SemiLagrange.cuh  Fluid_2D_common.cuh  Fluid_2D_kernels.cu  Fluid_2D_kernels.cuh  Fluid_3D.cuh  Fluid_3D_FLIP.cu  Fluid_3D_FLIP.cuh  Fluid_3D_PBF.cu  Fluid_3D_PBF.cuh  Fluid_3D_PCISPH.cu  Fluid_3D_PCISPH.cuh  Fluid_3D_SPH.cuh  Fluid_3D_common.cu  Fluid_3D_common.cuh  Fluid_3D_kernels.cu  Fluid_3D_kernels.cuh  Fluid_kernels.cuh  InitializationVolume.cuh  MAC_Grid_2D.cuh  MAC_Grid_3D.cu  MAC_Grid_3D.cuh  PressureEquation.cuh  PressureEquation2D.cuh  SPD_Solver.h  SVD.cu  SVD.cuh  VolumeData.cuh  WeightKernels.cuh  WeightKernels.h
Fluid/Legacy/: Fluid_2D.h  Fluid_2D_FLIP.cuh  Fluid_2D_PCISPH.cuh  Fluid_2D_kernels.cu  Fluid_2D_kernels.cuh  MAC_Grid_2D.cuh  PressureEquation.cuh  SPD_Solver.h  SVD.cu
Python/: fluids.py
Rendering/: DrawCommand.h  Quad.h  Quad_fs.glsl  Shader.cpp  Shader.h  WindowInfo.h  mesh.h  model.h  stb_image.h
Rendering/Renderer3D/: Container.cpp  Container.cu  Container.h  Container_fs.glsl  Container_vs.glsl  FluidMeshRenderer.cu  FluidMeshRenderer.cuh  InkRendererParticle.cuh  Mesher.cu  Mesher.cuh  PointSprites.cu  PointSprites.h  PointSprites_fs.glsl  PointSprites_vs.glsl  Renderer3D.h  ScreenSpaceNormal.cu  ScreenSpaceNormal.cuh  Skybox.cu  Skybox.h  Skybox_fs.glsl  Skybox_vs.glsl  camera.h
UI/: ui.cpp  ui.h
libs/glfw/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  cmake_uninstall.cmake  uninstall.vcxproj  uninstall.vcxproj.filters
report/: ChapterConclusions.tex  ChapterGPU.tex  ChapterGrid.tex  ChapterImplementFLIP.tex  ChapterIntro.tex  ChapterParticle.tex  ChapterPhysics.tex  ChapterRender.tex  ChapterResults.tex  MainReport.tex  abstract.tex  appendix1.tex  chapter1.tex  ociamthesis.cls  ociamthesismain.tex  oxbeltcrest.mf  oxbeltcrestletters.mf  oxcrest40.mf  refs.bib
report/deprecatedChapters/: ChapterGPU.tex
report/images/: ball_drop_blender_comparison.blend
resources/: LaunchConfigs.json
resources/AMGX-configs/: AMG_FRANK.json  PCG_FRANK.json
resources/Shaders/: Container_bottom_fs.glsl  Container_face_fs.glsl  Container_face_vs.glsl  Container_fs.glsl  Container_vs.glsl  FluidMeshRenderer_depth_fs.glsl  FluidMeshRenderer_fs.glsl  FluidMeshRenderer_vs.glsl  PointSprites_depth_fs.glsl  PointSprites_depth_vs.glsl  PointSprites_fs.glsl  PointSprites_ink_fs.glsl  PointSprites_normal_fs.glsl  PointSprites_normal_vs.glsl  PointSprites_phase_fs.glsl  PointSprites_points_fs.glsl  PointSprites_points_vs.glsl  PointSprites_render_fs.glsl  PointSprites_screen_fs.glsl  PointSprites_simple_fs.glsl  PointSprites_thickness_fs.glsl  PointSprites_thickness_vs.glsl  PointSprites_vs.glsl  Quad_fs.glsl  Quad_vs.glsl  RayTraceEnvironment.glsl  ScreenSpaceNormal_normal_fs.glsl  ScreenSpaceNormal_normal_vs.glsl  ScreenSpaceNormal_smooth_fs.glsl  Skybox_fs.glsl  (+2 more)
(+84 files in other folders)
